--- a/config_sample.env
+++ b/config_sample.env
@@ -46,9 +46,10 @@ TOKEN_PICKLE_URL = ""
 MULTI_SEARCH_URL = ""  # You can use gist raw link (remove commit id from the link, like config raw link check Heroku guide)
 YT_COOKIES_URL = ""  # You can use gist raw link
 NETRC_URL = ""  # You can use gist raw link
-# GDTOT COOKIES
-PHPSESSID = ""
-CRYPT = ""
+# GDTOT/AppDrive COOKIES
+APPDRIVE_EMAIL=
+APPDRIVE_PASS=
+GDTOT_CRYPT= 
 # To use limit don't add unit. Default unit is GB.
 TORRENT_DIRECT_LIMIT = ""
 ZIP_UNZIP_LIMIT = ""
